# reckot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SCRIPT_MIGRATION_PROGRESS.md  conftest.py  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  instructions.md  manage.py  migrate.sh  mobile-app.md  pyproject.toml  tailwind.config.js
.coolify/: pre-deploy.sh
.github/workflows/: ci.yml
apps/ai/: actions.py  admin.py  agent_orchestration.py  ai_query_views.py  apps.py  circuit_breaker.py  community_templates.py  decorators.py  example_usage.py  hackathon_views.py  low_bandwidth.py  models.py  monitoring.py  predictive_analytics.py  query_executor.py  services.py  smart_scanner.py  streaming.py  tasks.py  urls.py  verification.py  voice_creator.py
apps/analytics/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
apps/cfp/: admin.py  forms.py  models.py  tasks.py  test_cfp_submission.py  urls.py
apps/checkin/: actions.py  admin.py  api.py  apps.py  models.py  queries.py  services.py  urls.py
apps/core/: actions.py  adapters.py  admin.py  apps.py  context_processors.py  forms.py  image_signals.py  middleware.py  mixins.py  models.py  notification_views.py  signals.py  sitemaps.py  tasks.py  test_validators.py  urls.py  utils.py  validators.py
apps/events/: actions.py  admin.py  flyer_service.py  forms.py  models.py  queries.py  services.py  test_event_creation.py  urls.py
apps/marketing/: actions.py  admin.py  models.py  services.py  urls.py
apps/messaging/: actions.py  admin.py  models.py  services.py  tasks.py  urls.py
apps/orgs/: actions.py  admin.py  apps.py  models.py  services.py  urls.py
apps/payments/: actions.py  admin.py  apps.py  invoice_service.py  models.py  queries.py  services.py  signals.py  tasks.py  test_payment_flow.py  urls.py
apps/reports/: actions.py  admin.py  models.py  queries.py  services.py  urls.py
apps/tickets/: actions.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  test_booking.py  ticket_pdf_service.py  urls.py
apps/widgets/: actions.py  admin.py  models.py  urls.py
docker/: Dockerfile  Dockerfile.dev  README.md  entrypoint.sh
docker/postgres/: README.md  init-readonly-users.sh  init-readonly-users.sql
reckot/: asgi.py  celery.py  settings.py  storage.py  urls.py  wsgi.py
reckot/middleware/: admin_only.py  admin_redirect.py
static/: robots.txt  site.webmanifest  sw.js
templates/: 400.html  404.html  500.html  base.html  components.yaml  components.yml  offline.html  slippers.yaml
(+487 files in other folders)
