[project]
name = "reckot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-allauth>=65.0.0",
    "python-dotenv>=1.0.0",
    "slippers==0.6.2",
    "pyyaml==6.0.3",
    "sqlparse==0.5.5",
    "asgiref==3.11.0",
    "typeguard==2.13.3",
    "typing-extensions==4.15.0",
    "requests>=2.32.5",
    "openpyxl>=3.1.0",
    "qrcode[pil]>=7.4",
    "pillow>=10.0.0",
    "django-q2>=1.6.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]
