[project]
name = "reckot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.1",
    "django-allauth==65.4.1",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "django-redis>=5.4.0",
    "python-dotenv==1.0.1",
    "slippers==0.6.2",
    "pyyaml==6.0.3",
    "sqlparse==0.5.5",
    "asgiref==3.11.0",
    "typeguard==2.13.3",
    "typing-extensions==4.15.0",
    "requests==2.32.5",
    "openpyxl==3.1.5",
    "qrcode[pil]==8.0",
    "pillow==11.1.0",
    "pyjwt==2.10.1",
    "cryptography==44.0.0",
    "whitenoise==6.8.2",
    "gunicorn==23.0.0",
    "psycopg[binary]==3.2.4",
    "weasyprint>=68.0",
    "google-genai>=1.0.0",
    "hiredis>=3.3.0",
    "django-unfold>=0.40.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "django-storages>=1.14.6",
    "boto3>=1.42.44",
    "sentry-sdk[django]>=2.0.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.14",
    "django-stubs[compatible-mypy]>=5.1.3",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.3.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reckot.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
